syntax = "proto3";

option go_package = "github.com/no-mole/venus/proto/pbuser";

import "google/protobuf/empty.proto";
import "pbnamespace/namespace.proto";

service UserService {
  rpc UserRegister(UserInfo) returns (UserInfo);
  rpc UserUnregister(UserInfo)returns(UserInfo);
  rpc UserLogin(LoginRequest)returns(LoginResponse);
  rpc UserChangeStatus(ChangeUserStatusRequest)returns(google.protobuf.Empty);
  rpc UserList(google.protobuf.Empty)returns(UserListResponse);
  rpc UserNamespaceList(UserNamespaceListRequest)returns(pbnamespace.NamespaceUserListResponse);
}

message UserNamespaceListRequest{
  string uid = 1;//用户id
}

enum UserStatus{
  UserStatusNil = 0;
  UserStatusEnable = 1;
  UserStatusDisable = -1;
}

enum UserRole{
    UserRoleNil = 0;
    UserRoleMember = 1;
    UserRoleAdministrator = 2;
}

message ChangeUserStatusRequest{
  string uid = 1;//用户id
  UserStatus status = 2;
}

message UserListResponse{
  repeated UserInfo items = 1;
}

message LoginRequest{
  // @cTags: binding:"required"
  string uid = 1;//用户id,一般是邮箱
  // @cTags: binding:"required"
  string password = 3;//密码
}

message LoginResponse {
  string uid = 1; // 用户id,一般是邮箱
  string name = 2; // 用户名/显示名称
  string role = 3; // 用户全局角色 普通成员/管理员
  string access_token = 4; // access_token
  string token_type = 5; // token类型
  int64 expired_in = 6;//token 过期时间
  repeated pbnamespace.NamespaceUserInfo namespace_items = 7; //该用户下各namespace权限
}

message UserInfo{
  // @cTags: binding:"required"
  string uid = 1;//用户id,一般是邮箱
  string name = 2;//用户名/显示名称
  // @cTags: binding:"required"
  string password = 3;//密码
  string update_time = 4;//最近更新时间
  string updater = 5;//最近更新人
  UserStatus status = 6;//用户状态
  string role = 7;//用户全局角色 普通成员/管理员
}